ferritin/src/snapshots/ferritin__tests__get_struct_with_source_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct\").with_source(),\nOutputMode :: Agent, & get_fixture_crate_path ())"
---
Struct fixture_crate::TestStruct — in fixture-crate (0.1.0)

A simple struct for testing basic functionality.

This struct demonstrates basic usage patterns and should show completely since it only has one paragraph of documentation.

It uses Vector for testing intra-doc link resolution with renamed imports. Also tests HashMap which is a non-renamed import.

struct TestStruct {
    pub field: String,
    pub count: u32,
    private_field: bool,
}

## Fields

- field: String — A public field
- count: u32 — Another public field
- private_field: bool — A private field

## Methods

- pub const ASSOCIATED_CONST — This is an associated constant for a struct
- pub fn new(field: String, count: u32) -> Self — Create a new TestStruct
- pub fn get_field(&self) -> &str — Get the field value
- pub fn increment_count(&mut self) — Update the count

## Trait Implementations

TestTrait<T = String>

std: Clone, Debug, Freeze, From<Self>, RefUnwindSafe, Send, Sync, Unpin, UnsafeUnpin, UnwindSafe

- impl Any where Self: 'static + ?Sized
- impl Borrow<Self> where Self: ?Sized
- impl BorrowMut<Self> where Self: ?Sized
- impl CloneToUninit where Self: Clone
- impl<U: From<Self>> Into<U>
- impl ToOwned where Self: Clone — type Owned = Self
- impl<U: Into<Self>> TryFrom<U> — type Error = Infallible
- impl<U: TryFrom<Self>> TryInto<U> — type Error = <U as TryFrom<Self>>::Error

Source: /TEST_CRATE_ROOT/src/lib.rs

```rust
#[derive(Debug, Clone)]
pub struct TestStruct {
    /// A public field
    pub field: String,
    /// Another public field
    pub count: u32,
    /// A private field
    private_field: bool,
}
```
